# catalyst_logic_plan

./: .gitignore  README.md  build.sbt  pyproject.toml
.github/workflows/: ci-publish-pypi.yml
project/: build.properties
python/: NOTICE  README_PYPI.md
python/src/spark_logical_plan_capture/: __init__.py  api.py
scripts/: prepare_python_package.py
src/main/scala/com/example/spark/plan/: CapturedLogicalPlanPayload.scala  LogicalPlanCaptureExtension.scala  LogicalPlanLogDecoder.scala
src/test/scala/com/example/spark/plan/: CapturedLogicalPlanPayloadSpec.scala  LogicalPlanCaptureExtensionSpec.scala  TestLogAppender.scala
